# ot-harjoitustyo

./: .coveragerc  .gitignore  Suorita ohjelma.lnk  pyproject.toml  readme.md  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  käyttöohje.md  testaus.md  tietokanta_arkkitehtuuri.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HSLsekvenssikaavio.markdown  monopoli.markdown  sekvenssikaavio.markdown
src/: config.py  database_connection.py  database_test.py  index.py  initialize_database.py
src/data/: devices.db
src/entities/: project device.py  project_device.py  project_point.py
src/repository/: device_repository.py
src/services/: file_service.py  project_data_service.py  project_device_maker.py
src/tests/: database_test.py  device_repository_test.py  project_data_service_test.py  project_device_maker_test.py  project_device_test.py  project_point_test.py
src/ui/: add_project_device.py  edit_device.py  main_window.py  new_device.py  ui.py
